Solving issues:#29 #21 #14 #13
 Additional improvements:
 - sizes input windows and parameter windows were also to small
 - In case no dalys can be calculated (scenarios have different
transition rates) this is now added to the label